extends Control;

@onready var abi_1_count : ProgressBar = $HBoxContainer/Ability1Icon/Abilty1Count;
@onready var abi_2_count : ProgressBar = $HBoxContainer/Ability1Icon2/Abilty1Count;
@onready var abi_3_count : ProgressBar = $HBoxContainer/Ability1Icon3/Abilty1Count;
@onready var abi_4_count : ProgressBar = $HBoxContainer/Ability1Icon4/Abilty1Count;
@onready var anim : AnimationPlayer = $AnimationPlayer;

func _ready():
	pass
